<resources>
    <string name="app_name">PlaySnap UI</string>
    <string name="started_title">PlaySnap</string>
    <string name="started_subtitle">Tempat terbaik untuk menemukan ide permainan dengan mudah</string>
    <string name="btn_signup">DAFTAR</string>
    <string name="btn_login">MASUK</string>
    <string name="tv_login_title">Selamat Datang!</string>
    <string name="tv_login_subtitle">
        <font color="#6995C9"><b>Masuk</b></font>
        untuk melanjutkan
    </string>
    <string name="login_email"> Email Anda</string>
    <string name="login_password"> Sandi Anda</string>
    <string name="login_forgot_pw">Lupa Sandi?</string>
    <string name="login_havent_account">
        Saya tidak punya akun
    </string>
    <string name="daftar">
        <font color="#6995C9"><b>Daftar</b></font>
    </string>
    <string name="tv_register_title">Hai!</string>
    <string name="tv_register_subtitle">
        <font color="#6995C9"><b>Daftar</b></font>
        untuk memulai aplikasi ini
    </string>
    <string name="register_fullname">Nama lengkap Anda</string>
    <string name="register_email">Email Anda</string>
    <string name="register_username">Nama pengguna Anda</string>
    <string name="register_password">Sandi Anda</string>
    <string name="register_confirmpass">Konfirmasi sandi Anda</string>
    <string name="register_have_account">
        Saya sudah punya akun
    </string>
    <string name="masuk">
        <font color="#6995C9"><b>Masuk</b></font>
    </string>
    <string name="btn_register">DAFTAR</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_greating">Selamat Pagi,</string>
    <string name="title_name">Totok!</string>
    <string name="subtitle_home">Ayo temukan permainan</string>
    <string name="subtitle_home2">seru di sekitarmu ~</string>
    <string name="filter_game">FILTER PERMAINAN</string>
    <string name="scan_object">PINDAI OBJEK</string>
    <string name="type_object">KETIK OBJEK</string>
    <string name="title_recommendation">Permainan Populer!</string>
    <string name="title_like">Main, Yuk!</string>
    <string name="subtitle_like">Ini permainan yang kamu sukai</string>
    <string name="title_bookmark">Ayo, Main Lagi!</string>
    <string name="subtitle_bookmark">Mainkan lagi permainan yang kamu simpan</string>
    <string name="title_profile">Profil</string>
    <string name="full_name">Totok Sugianto</string>
    <string name="email">totoksugianto@gmail.com</string>
    <string name="btn_edit_profile">Edit Profil</string>
    <string name="subttile_profile">Akun</string>
    <string name="history_game">Riwayat Permainan</string>
    <string name="report">Laporkan</string>
    <string name="setting_acc">Atur Akun</string>
    <string name="tv_filter_title">Filter Permainan</string>
    <string name="tv_filter_subtitle">Pilih kategori sesuai dengan kondisimu!</string>
    <string name="filter_usia_main_btn_text">Usia</string>
    <string name="filter_lokasi_main_btn_text">Lokasi</string>
    <string name="filter_pemain_main_btn_text">Pemain</string>
    <string name="filter_properti_main_btn_text">Properti</string>
    <string name="filter_usia_choice_btn_title">Rentang Usia</string>
    <string name="filter_lokasi_choice_btn_title">Tipe lokasi</string>
    <string name="filter_pemain_choice_btn_title">Jumlah Pemain</string>
    <string name="filter_properti_choice_btn_title">Properti Main</string>
    <string name="mulai_btn_text">MULAI</string>
    <string name="hapus_btn_text">HAPUS</string>
    <string name="tv_ketikobj_title">Siap Bermain?</string>
    <string name="tv_ketikobj_subtitle">Tambahkan atau hapus objek sesuai keinginanmu ~</string>
    <string name="searchbar_ketikobj_default">Tambahkan objek...</string>
    <string name="tv_manage_object_title">"Ketik Objek"</string>
    <string name="tv_manage_object_subtitle">"Tambahkan objek sesuai keinginanmu untuk mulai bermain ~"</string>
    <string name="hint_manage_object">"Tambahkan objek...</string>
    <string name="title_foryou">Hanya Untukmu!</string>
    <string name="sub_permainan">Permainan</string>
    <string name="title_help">Butuh Bantuan?</string>
    <string name="subtitle_help">Berikut beberapa pertanyaan yang sering diajukan oleh sobat PlaySnap, semoga membantu!</string>
    <string name="question1_apa_itu">Apa itu PlaySnap?</string>
    <string name="question2_kenapa_pilih">Kenapa pilih PlaySnap?</string>
    <string name="question3_bagaimana_cara">Bagaimana cara pindai gambar?</string>
    <string name="question4_bagaimana_cara">Bagaimana cara cari permainan?</string>
    <string name="question5_bagaimana_cara">Bagaimana cara menghapus objek?</string>
    <string name="question6_kenapa_objek">Kenapa objek tidak muncul setelah dipindai?</string>
    <string name="question7_bagaimana_cara">Bagaimana cara melihat riwayat permainan?</string>
    <string name="title_send_question">Masih buntu? Ajukan pertanyaan!</string>
    <string name="tv_titleq1_banner">Apa itu PlaySnap?</string>
    <string name="tv_subtitle_banner">Berikut penjelasannya!</string>
    <string name="title_q1">Mari berkenalan dengan aplikasi PlaySnap!</string>
    <string name="q1_answer">PlaySnap adalah aplikasi pintar yang membantu kamu menemukan dan memainkan permainan tradisional (tanpa gadget). Dengan teknologi machine learning, PlaySnap bisa:\n\n
        1. Mengenali objek di sekitar kamu melalui kamera, lalu merekomendasikan permainan yang sesuai.\n
        - Contohnya: Kalau kamu memotret bola, PlaySnap akan menyarankan permainan seperti sepak bola mini atau kasti.\n\n
        2. Memberikan rekomendasi tanpa objek, jadi kamu tetap bisa bermain di mana saja.\n\n
        3. Memfilter rekomendasi permainan berdasarkan kebutuhan, seperti lokasi (indoor atau outdoor), usia pemain, menggunakan properti main atau tidak, dan jumlah pemain.\n\n
        4. Menyediakan deskripsi dan tutorial lengkap untuk setiap permainan.\n\n
        <b>Fitur tambahan:\n</b>
        - Kamu bisa like, share, dan bookmark permainan favorit.\n
        - Melihat riwayat permainan yang pernah kamu pilih.\n
        - Dan tentunya, mengedit profil untuk menyesuaikan preferensimu.\n\n
        Intinya: PlaySnap bikin momen bermain jadi lebih seru, kreatif, dan penuh nostalgia!</string>
    <string name="tv_titleq2_banner">Kenapa Pilih PlaySnap?</string>
    <string name="title_q2">Yuk lihat keuntungan jika menggunakan PlaySnap!</string>
    <string name="q2_answer"><b>1️. Meningkatkan kreativitas anak\n</b>
        Alih-alih hanya bermain game di layar, PlaySnap membantu anak menemukan permainan yang mendorong kreativitas dan imajinasi mereka.\n\n
        <b>2️. Menggunakan teknologi AI canggih</b>\n
        Aplikasi ini mampu mengenali berbagai objek dengan akurasi tinggi, sehingga rekomendasi permainan menjadi lebih relevan dan menarik.\n\n
        <b>3️. Mudah digunakan</b>\n
        Antarmuka aplikasi dirancang agar mudah dipahami oleh anak-anak, dengan ikon yang jelas dan navigasi yang sederhana.\n\n
        <b>4️. Mengurangi screen time anak</b>\n
        PlaySnap bertujuan untuk mengajak anak-anak lebih aktif dan eksploratif dalam bermain, mengurangi ketergantungan pada perangkat digital.\n\n
        <b>5️. Cocok untuk segala usia</b>\n
        Aplikasi ini dapat digunakan oleh berbagai kelompok usia, baik anak-anak kecil yang membutuhkan ide bermain maupun orang tua yang ingin bermain bersama anak mereka.</string>
    <string name="tv_titleq3_banner">Bagaimana Cara Pindai Gambar?</string>
    <string name="title_q3">Berikut langkah-langkah untuk pindai gambar</string>
    <string name="q3_answer">
        1️. Buka aplikasi PlaySnap di perangkat kamu.\n
        \n
        2️. Tekan tombol "Pindai Objek" di halaman utama.\n
        \n
        3️. Arahkan kamera perangkat ke objek yang ingin dipindai. Pastikan objek cukup terang dan tidak tertutup oleh benda lain.\n
        \n
        4️. Tekan tombol untuk mengambil foto dan memulai proses pemindaian.\n
        \n
        5️. Tunggu beberapa detik hingga PlaySnap menganalisis gambar dan menampilkan rekomendasi permainan berdasarkan objek yang terdeteksi. Pada saat proses tersebut, kamu bisa menghapus gambar dan objek yang tidak diinginkan. Bahkan, kamu juga bisa menambahkan objek yang tertinggal secara manual lho!\n
        \n
        6️. Pilih salah satu permainan dari daftar rekomendasi dan mulai bermain!\n
        \n
        <b>Tips agar pemindaian lebih akurat:\n</b>
        - Gunakan pencahayaan yang cukup.\n
        - Pastikan objek dalam fokus kamera.\n
        - Hindari latar belakang yang terlalu ramai agar objek lebih mudah dikenali.</string>
    <string name="tv_titleq4_banner">Bagaimana Cara Cari Permainan?</string>
    <string name="title_q4">Berikut langkah-langkah untuk mencari permainan</string>
    <string name="q4_answer">
        1. Ketik nama objek atau kata kunci permainan yang diinginkan di kolom pencarian. Misalnya, "bola" atau "lego".\n
    \n
    2. PlaySnap akan menampilkan daftar permainan yang relevan berdasarkan kata kunci tersebut.\n
    \n
    3. Klik pada permainan yang ingin dimainkan untuk melihat instruksi dan mulai bermain.</string>
    <string name="tv_titleq5_banner">Bagaimana Cara Menghapus Objek?</string>
    <string name="title_q5">Berikut langkah-langkah untuk mengnapus objek</string>
    <string name="q5_answer">
        1. PlaySnap akan menampilkan objek jika sistem sudah selesai mendeteksi objek apa saja yang ada di gambar yang kamu pindai.\n
        \n
        2. Pilih objek yang ingin dihapus dari daftar.\n
        \n
        3. Tekan ikon hapus yang tersedia di samping objek tersebut.\n
        \n
        4. Konfirmasi penghapusan untuk memastikan bahwa kamu benar-benar mau menghapus objek tersebut. Setelah dihapus, objek tersebut tidak akan muncul lagi di daftar pemindaian, tetapi Anda tetap bisa memindainya kembali di lain waktu jika diperlukan atau menambahkannya secara manual.
    </string>
    <string name="tv_titleq6_banner">Kenapa Objek Tidak Muncul Saat Dipindai?</string>
    <string name="title_q6">Mari lihat penyebab objek yang tidak muncul</string>
    <string name="q6_answer">
        <b>1. Pencahayaan kurang memadai\n</b>
        Pastikan objek yang dipindai berada di tempat yang cukup terang agar sistem dapat mengenalinya dengan baik.\n
        \n
        <b>2. Objek tidak dikenali oleh sistem\n</b>
        Beberapa objek yang sangat umum mungkin belum terdaftar dalam sistem PlaySnap. Coba pindai objek lain atau gunakan sudut yang berbeda.\n
        \n
        <b>3. Koneksi internet tidak stabil\n</b>
        PlaySnap memerlukan koneksi internet untuk mengakses database permainan. Pastikan perangkat Anda memiliki koneksi internet yang baik.
    </string>
    <string name="tv_titleq7_banner">Bagaimana Cara Melihat Riwayat Permainan?</string>
    <string name="title_q7">Yuk lihat riwayat permainan kamu!</string>
    <string name="sign_out_message">Apakah kamu yakin ingin keluar dari akun ini?</string>
    <string name="no_message">TIDAK</string>
    <string name="yes_message">YA</string>
    <string name="option_laki">Laki-laki</string>
    <string name="option_perempuan">Perempuan</string>
    <string name="option_none">-</string>
    <string name="title_delete_account">Hapus Akun</string>
    <string name="tv_input_pass">Password</string>
    <string name="hint_input_password">Masukkan Password</string>
    <string name="info_delete_acc">*PlaySnap tidak bertanggung jawab atas hilangnya informasi setelah akun ini dihapus secara permanen</string>
    <string name="confirm_delete_acc">Saya bersedia menghapus akun ini secara permanen</string>
    <string name="btn_delete_acc">HAPUS AKUN</string>
    <string name="btn_cancel_delete">BATAL</string>
</resources>