<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilePageActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/title_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin= "40dp"
        android:fontFamily="@font/leaguespartanextrabold"
        android:text="@string/title_profile"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:src="@drawable/ic_profile_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_profile" />

    <TextView
        android:id="@+id/tv_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/leaguespartanbold"
        android:text="@string/full_name"
        android:textColor="@color/dark_blue"
        android:textSize="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_pic"
        app:layout_constraintTop_toBottomOf="@id/title_profile" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:text="@string/email"
        android:fontFamily="@font/andikaregular"
        app:layout_constraintTop_toBottomOf="@id/tv_full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/profile_pic"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_edit_profile"
        style="@style/ButtonBlue"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_edit_profile"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintStart_toEndOf="@id/profile_pic"/>

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/subttile_profile"
        android:textColor="@color/dark_blue"
        android:textSize="22dp"
        android:fontFamily="@font/leaguespartanbold"
        app:layout_constraintTop_toBottomOf="@id/profile_pic"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_history_game"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_account"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="12dp"
        android:drawablePadding="12dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_history_game"
        android:drawableEnd="@drawable/back_button_mini"
        android:text="@string/history_game"
        android:textSize="17dp"
        android:fontFamily="@font/leaguespartanregular"
        android:textAlignment="textStart"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_report"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="12dp"
        android:drawablePadding="12dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_report"
        android:drawableEnd="@drawable/back_button_mini"
        android:text="@string/report"
        android:textSize="17dp"
        android:fontFamily="@font/leaguespartanregular"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_history_game"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_setting_acc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="12dp"
        android:drawablePadding="8dp"
        android:paddingStart="5dp"
        android:paddingEnd="10dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_setting_account"
        android:drawableEnd="@drawable/back_button_mini"
        android:text="@string/setting_acc"
        android:textSize="17dp"
        android:fontFamily="@font/leaguespartanregular"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_report"/>

    <ImageView
        android:id="@+id/iv_bottom_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="528dp"
        android:src="@drawable/field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>