<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pop_up_gender"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="355dp"
        android:layout_height="100dp"
        android:background="@drawable/bg_button_lightblue">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/opt1_laki"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:text="@string/option_laki"
            android:textSize="10dp"
            android:fontFamily="@font/andikaregular"
            android:background="@drawable/bg_button_white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/opt2_perempuan"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:text="@string/option_perempuan"
            android:textSize="10dp"
            android:fontFamily="@font/andikaregular"
            android:background="@drawable/bg_button_white"
            app:layout_constraintTop_toBottomOf="@id/opt1_laki"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/opt3_none"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:text="@string/option_none"
            android:textSize="10dp"
            android:fontFamily="@font/andikaregular"
            android:background="@drawable/bg_button_white"
            app:layout_constraintTop_toBottomOf="@id/opt2_perempuan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>