<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="180dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="3dp"
    android:background="@drawable/card_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <ImageView
            android:id="@+id/iv_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete_acc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/sign_out_message"
            android:textAlignment="center"
            android:textSize="11dp"
            android:fontFamily="@font/andikaregular"
            app:layout_constraintTop_toBottomOf="@id/iv_sign_out"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_no"
            style="@style/ButtonBlue"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/no_message"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tv_title_sign_out"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_yes"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_button_white"
            android:text="@string/yes_message"
            android:textColor="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/btn_no"
            app:layout_constraintTop_toBottomOf="@id/tv_title_sign_out" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>


